--- a/test.tex
+++ b/test.tex
@@ -18,10 +18,10 @@ $\mathbf{Definition}$ The THC-Cromwell matrix is the matrix that satisfies the f
     \item It has only two '1's in every row and column, except for two rows. These two rows have three '1's.
 \end{enumerate}
 $\mathbf{Theorem}$ Every Theta knot and Hand-Cuff knot has its corresponding THC-Cromwell matrix. \\ \\
-$\mathbf{Definition}$ The Hun's Matrix of THC-matrix is $(n-1)\times(n-1)$ matrix \\
+$\mathbf{Definition}$ Let any exception row(with three '1's) $i$ and it's two outer '1's $j$, $k$. The Hun's Matrix of THC-matrix is $(n-1)\times(n-1)$ matrix which deleted row $i$ and column $j$,$k$.\\
 $\mathbf{Theorem}$ 
 Hun's matrix good good verygood
 
 
 
-\end{document}
+\end{document}=
