--- a/test.tex
+++ b/test.tex
@@ -21,7 +21,7 @@ $\mathbf{Theorem}$ Every Theta knot and Hand-Cuff knot has its corresponding THC
 $\mathbf{Definition}$ Let any exception row(with three '1's) $i$ and it's two outer '1's $j$, $k$. The Hun's Matrix of THC-matrix is $(n-1)\times(n-1)$ matrix which deleted row $i$ and column $j$,$k$.\\
 $\mathbf{Theorem}$ 
 Hun's matrix good good verygood
+ASDF
 
 
-
-\end{document}=
+\end{document}
