--- a/test.tex
+++ b/test.tex
@@ -25,49 +25,48 @@ Hun's matrix good good verygood
 ASDF
 
 \section{Proof in the case of theta curve}
-Erase the vertices(dots) of the row which has 3 vertices and also erase connected vertices of the left and right erased vertices in the grid diagram. Then, we can make the matrix of this grid diagram by (section n).\\
-한 row를 지울 때 양옆의 점이 지워지면, 그에 따라 다른 세 개의 점을 가진 row의 무슨 점이 지워지는지에 따라 지움(용어가 있으면 좋겠다)을 시행한 grid diagram은 각자 다른 matrix을 낳을 수 있다.
+Erase the vertices(dots) of the row which has 3 vertices and also erase connected vertices of the left and right erased vertices in the grid diagram. Then, we can make the matrix of this grid diagram by (section n).\\ If end vertices is erased when we delete the row, then by what vertices is erased in the other three vertices row in the grid diagram can make different matrix.
 \begin{enumerate}
-    \item \textbf{0개}\\
-    T자 모양의 도형이 나온다.
-    \item \textbf{1개 (가운데 점)}\\
-    선 모양의 도형이 나온다.
-    \item \textbf{1개 (끝 점)}\\
-    선 모양의 도형이 나온다.
-    \item \textbf{2개 (끝 점 2개}\\
-    T 모양의 도형이 나온다.
-    \item \textbf{2개 (가운데와 끝 점)}\\
-    선 모양의 도형이 나온다.
+    \item \textbf{0}\\
+    T-shaped figure is given.
+    \item \textbf{1 (middle vertex)}\\
+    Line-shaped figure is given.
+    \item \textbf{1 (end vertex)}\\
+    Line-shaped figure is given.
+    \item \textbf{2 (two end vertices)}\\
+    T-shaped figure is given.
+    \item \textbf{2 (middle and end vertices)}\\
+    Line-shaped figure is given.
 \end{enumerate}
 
 \begin{enumerate}
-    \item \textbf{선 모양}\\
-    다음과 같은 matrix를 생각하자.
+    \item \textbf{Line-shaped}\\
+    Let the matrix is given.
     $$\begin{pmatrix}
         1 & 1 & 1 & 0\\
         0 & 1 & 1 & 1\\
         1 & 0 & 0 & 1
     \end{pmatrix}$$
-    여기서 Hun's matrix를 만드는 작업을 하면 다음과 같은 그림의 선을 얻을 수 있다.
-    이를 (section n)에 따라 matrix로 변환하면,
+    If you work on deleting rows and columns here, you can get the line-shaped figure of the following figure. If you convert this into a matrix according to (section n),
     $$\begin{pmatrix}
         1 & 1 \\
         0 & 1
     \end{pmatrix}$$
-    If we appropriately perform adding multiple of one row to another row and replacing the second row with the result, the determinant changes only by $\pm 1$, and the resulting matrix will be identity matrix. 다른 모양들도 적절히 변형시키면 같은 결과를 얻을 수 있다.
-    \item \textbf{T 모양}\\
-        다음과 같은 matrix를 생각하자.
+    is given.
+    If we appropriately perform adding multiple of one row to another row and replacing the second row with the result, the determinant changes only by $\pm 1$, and the resulting matrix will be identity matrix. If we appropriately transform other theta curves, we can get the same result.
+    \item \textbf{T-shaped}\\
+    Let the matrix is given.
     $$\begin{pmatrix}
         1 & 1 & 1\\
         1 & 1 & 1\\
     \end{pmatrix}$$
-    여기서 Hun's matrix를 만드는 작업을 하면 다음과 같은 그림의 T 모양을 얻을 수 있다. 이를 (section n)에 따라 matrix로 변환하면,
+    If you work on deleting rows and columns here, you can get the T-shaped figure of the following figure. If you convert this into a matrix according to (section n),
     $$\begin{pmatrix}
         1 & 1 & 1\\
         0 & 1 & 0\\
         0 & 0 & 1
     \end{pmatrix}$$
-    If we appropriately perform adding multiple of one row to another row and replacing the second row with the result, the determinant changes only by $\pm 1$, and the resulting matrix will be identity matrix. 다른 모양들도 적절히 변형시키면 같은 결과를 얻을 수 있다.
+    If we appropriately perform adding multiple of one row to another row and replacing the second row with the result, the determinant changes only by $\pm 1$, and the resulting matrix will be identity matrix. If we appropriately transform other theta curves, we can get the same result.
 \end{enumerate}
 Therefore, $\pm 1$ will be the determinant of the theta curve's Hun's matrix.
 
