--- a/test.tex
+++ b/test.tex
@@ -40,7 +40,7 @@ Erase the vertices(dots) of the row which has 3 vertices and also erase connecte
 \end{enumerate}
 
 \begin{enumerate}
-    \item \textbf{Line-shaped}\\
+    \item \textbf{Line-shaped figure}\\
     Let the matrix is given.
     $$\begin{pmatrix}
         1 & 1 & 1 & 0\\
@@ -54,7 +54,7 @@ Erase the vertices(dots) of the row which has 3 vertices and also erase connecte
     \end{pmatrix}$$
     is given.
     If we appropriately perform adding multiple of one row to another row and replacing the second row with the result, the determinant changes only by $\pm 1$, and the resulting matrix will be identity matrix. If we appropriately transform other theta curves, we can get the same result.
-    \item \textbf{T-shaped}\\
+    \item \textbf{T-shaped figure}\\
     Let the matrix is given.
     $$\begin{pmatrix}
         1 & 1 & 1\\
