--- a/test.tex
+++ b/test.tex
@@ -2,9 +2,12 @@
 \usepackage{graphicx} % Required for inserting images
 \usepackage{kotex}
 \usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+
 
 \title{R\&E 참고용}
-\author{조은찬 24-097}
+\author{24-097 조은찬, 23-065 신정원, 23-044 서보연, 23-104 최민호}
 \date{June 2025}
 
 \begin{document}
@@ -12,18 +15,40 @@
 \maketitle
 
 \section{Introduction}
-$\mathbf{Definition}$ The grid diagram of a knot is a projection that consists only of horizontal and vertical lines, and the vertical line always passes above the horizontal line. (However, in this case, there must be exactly two points (excluding the vertices) that are vertically bent for each horizontal line (row) and vertical line (column), and the two vertices must be on the horizontal line.) \\ \\
-$\mathbf{Definition}$ The THC-Cromwell matrix is the matrix that satisfies the following conditions.
+$\mathbf{Definition}$ The \textbf{grid diagram} of a knot is a projection that consists only of horizontal and vertical lines, and the vertical line always passes above the horizontal line. (However, in this case, there must be exactly two points (excluding the vertices) that are vertically bent for each horizontal line (row) and vertical line (column), and the two vertices must be on the horizontal line.) \\ \\
+$\mathbf{Definition}$ The \textbf{THC-Cromwell matrix} is the matrix that satisfies the following conditions.
 \begin{enumerate}
-    \item It is a $n\times(n+1)$ matrix with entries 0 and 1
-    \item It has only two '1's in every row and column, except for two rows. These two rows have three '1's.
+    \item It is a $n\times(n+1)$ matrix with entries 0 and 1.
+    \item It has only two `1's in every row and column, except for two rows. These two rows have three `1's.
 \end{enumerate}
-$\mathbf{Theorem}$ Every Theta knot and Hand-Cuff knot has its corresponding THC-Cromwell matrix. \\ \\
-$\mathbf{Definition}$ Let any exception row(with three '1's) $i$ and it's two outer '1's $j$, $k$. The Hun's Matrix of THC-matrix is $(n-1)\times(n-1)$ matrix which deleted row $i$ and column $j$,$k$.\\
-$\mathbf{Theorem}$ 
+$\mathbf{Theorem}$ Every theta-curve and handcuff knot has its corresponding THC-Cromwell matrix. \\ \\
+$\mathbf{Definition}$ Let any exception row(with three '1's) $i$ and its two outer '1's $j$, $k$. The \textbf{H-deletion} Matrix of THC-Cromwell matrix is $(n-1)\times(n-1)$ matrix which deleted row $i$ and column $j$,$k$.
 
-\section{Proof in the case of theta curve}
-Erase the vertices(dots) of the row which has 3 vertices and also erase connected vertices of the left and right erased vertices in the grid diagram. Then, we can make the matrix of this grid diagram by (section n).\\ If end vertices is erased when we delete the row, then by what vertices is erased in the other three vertices row in the grid diagram can make different matrix.
+\section{Method of changing grid diagram of a knot to simple matrix}
+First, we should change grid diagram of a knot into Cromwell matrix. However, we can apply row operation of interchanging the rows. In this way, determinant of the Cromwell matrix would change only by multiplying $\pm 1$.\\
+By applying row operation, we should make matrix such as
+    $$\begin{pmatrix} 
+    1 & 1 & 0 & \cdots & 0\\
+    0 & 1 & 1 &  &  \\
+    0 & 0 & 1 & & \vdots\\ 
+    \vdots & & & \ddots & \\
+    1 & 0 & \cdots & 0 & 1
+    \end{pmatrix}$$
+Let matrix is $n\times n$.
+Next, we apply the row operation. We add the upper rows to the most bottom row. Then,
+    $$\begin{pmatrix} 
+    1 & 1 & 0 & \cdots & 0\\
+    0 & 1 & 1 &  &  \\
+    0 & 0 & 1 & & \vdots\\ 
+    \vdots & & & \ddots & \\
+    2 & 2 & \cdots & 2 & 2
+    \end{pmatrix}$$
+Lastly, by subtracting ($2i-1$)th row $(i \in \mathbb{N})$ with multiplying row by 2 and substract with most bottom row, if n is even, the most bottom row only contains 0. Since it is upper triangular matrix, we can obtain determinant by trace. Hence the last entry is 0, the determinant is 0. If n is odd, the last entry of most bottom row is 2 and other entry is all 0. Since it is upper triangular matrix, we can obtain determinant by trace too. Hence the other entry is all 1, the determinant is $\pm 2$.
+
+
+
+\section{Proof in the case of theta-curve}
+Erase the vertices of the row which has 3 vertices and also erase connected vertices of the left and right erased vertices in the grid diagram. Then, we can make the matrix of this grid diagram by previous section.\\ If end vertices is erased when we delete the row, then by what vertices is erased in the other three vertices row in the grid diagram can make different matrix.
 \begin{enumerate}
     \item \textbf{0}\\
     T-shaped figure is given.
@@ -51,7 +76,7 @@ Erase the vertices(dots) of the row which has 3 vertices and also erase connecte
         0 & 1
     \end{pmatrix}$$
     is given.
-    If we appropriately perform adding multiple of one row to another row and replacing the second row with the result, the determinant changes only by $\pm 1$, and the resulting matrix will be identity matrix. If we appropriately transform other theta curves, we can get the same result.
+    If we appropriately perform adding multiple of one row to another row and replacing the second row with the result, the determinant changes only by $\pm 1$, and the resulting matrix will be identity matrix. If we appropriately transform other theta-curves, we can get the same result.
     \item \textbf{T-shaped figure}\\
     Let the matrix is given.
     $$\begin{pmatrix}
@@ -64,9 +89,9 @@ Erase the vertices(dots) of the row which has 3 vertices and also erase connecte
         0 & 1 & 0\\
         0 & 0 & 1
     \end{pmatrix}$$
-    If we appropriately perform adding multiple of one row to another row and replacing the second row with the result, the determinant changes only by $\pm 1$, and the resulting matrix will be identity matrix. If we appropriately transform other theta curves, we can get the same result.
+    If we appropriately perform adding multiple of one row to another row and replacing the second row with the result, the determinant changes only by $\pm 1$, and the resulting matrix will be identity matrix. If we appropriately transform other theta-curves, we can get the same result.
 \end{enumerate}
-Therefore, $\pm 1$ will be the determinant of the theta curve's Hun's matrix.
+Therefore, $\pm 1$ will be the determinant of the theta-curve's H-deletion matrix.
 
 
 \end{document}
