--- a/test.tex
+++ b/test.tex
@@ -2,19 +2,14 @@
 \usepackage{graphicx} % Required for inserting images
 \usepackage{kotex}
 \usepackage{amsmath}
-<<<<<<< HEAD
 \usepackage{mathtools}
 \usepackage{amsthm}
 
 \newtheorem{thm}{Theorem}
 \theoremstyle{definition}
 \newtheorem{defn}[thm]{Definition}
-=======
-\usepackage{amsfonts}
-\usepackage{amssymb}
-\usepackage{amsthm}
 
->>>>>>> aace79217ec8d4ade2fccb343524f3c694495a69
+\onehalfspacing
 
 \title{R\&E 참고용}
 \author{24-097 조은찬, 23-065 신정원, 23-044 서보연, 23-104 최민호}
