--- a/Midterm_report.tex
+++ b/Midterm_report.tex
@@ -54,15 +54,19 @@ Each chapter should be preceded by an abstract (10--15 lines long) that summariz
 
 
 \section{Introduction}
+연구했던 방향을 그림으로 그린 다음 정리하면 좋을 듯? 내가 카이알앤이 첫날에 했던 것처럼
 
 \section{Theoretical Background}
-우리가 여름방학 때 공부한 것들, 선행연구 논문에 있던 것들,
+우리가 여름방학 때 공부한 것들, 선행연구 논문에 있던 것들 요약 정리
 
 \section{Research Methods and Procedure}
+Theorem을 적어나가면서 하나씩 증명하는 방법이면 좋을 것 같음 (졸업논문처럼)
 
 \section{Research Result}
+뭔가 나오긴 하겠지...............?
 
 \section{Conclusion}
+요약, 더 나아가서 어떻게 써먹을 수 있을지?
 
 \begin{thebibliography}{9}
     \bibitem{lamport94}
