--- a/Midterm_report.tex
+++ b/Midterm_report.tex
@@ -11,12 +11,19 @@
 \usepackage{authblk}
 \usepackage{enumitem}
 
-
-\onehalfspacing
-
 \newtheorem{thm}{Theorem}
 \theoremstyle{definition}
 \newtheorem{defn}[thm]{Definition}
+\theoremstyle{theorem}
+\newtheorem{theorem}{Theorem}
+\theoremstyle{proposition}
+\newtheorem{prop}{Proposition}
+\theoremstyle{corollary}
+\newtheorem*{corol}{Corollary}
+
+
+\onehalfspacing
+\setlength\parindent{0pt}
 
 \renewcommand\Affilfont{\small}
 
@@ -53,7 +60,7 @@ Our purpose of this research is classifying theta-curves and handcuff graphs by 
 We tried to find those arc indices by proving lower bounds and upper bounds of the theta-curves and handcuff graphs.
 Also we programmed Python code that returns Cromwell matrix of the theta curves which have crossing up to 7.
 Yamada polynomial was used to prove bounds and programming the Python code.\\ \\
-\textbf{Keywords : theta-curves, handcuff graphs, arc index, Yamada polynomial}
+\textbf{Keywords : theta-curve, handcuff graph, arc index, Yamada polynomial}
 \\
 \end{abstract}
 
@@ -68,11 +75,14 @@ Theta-curve is a spatial knot on 3-sphere which has 2 vertices and 3 edges. In t
 
 Handcuff graph consists of two loops and an edge joining the loops. In the projection of the handcuff graph, the section where handcuff graph meets itself is named crossing. If the one handcuff graph and other handcuff graph's continuous transform of the graph is same, these graphs are equivalent. Similar with the theta-curve, the Reidemeister move is used to transfrom a projection of handcuff graph. (이미지 넣어야 함)\\
 
-Arc presentation of the theta curve is by one binding axis, 
+When there is one binding axis and finite number of half plane is embedded, it is called arc presentation. The intersection of the half plane and theta curve should be a simple curve. In knot theory, arc index is a knot invariant defined by the minimal number of half planes in the arc presentation. We find the arc index for the prime theta and handcuff curve with up to seven crossings.
 
 \section{Theoretical Background}
 우리가 여름방학 때 공부한 것들, 선행연구 논문에 있던 것들 요약 정리\\
-졸업논문에 나와있던 호지수의 범위 요약하면 좋을 듯?
+졸업논문에 나와있던 호지수의 범위 요약하면 좋을 듯?\\
+
+The link with $n$-components is an embedding of the disjoint union of $n$ circles $S^1 \cup \cdots \cup S^1$ in $\mathbb{R}^3$. $1$-component link is called a \textit{knot}.
+
 
 \section{Research Methods and Procedure}
 Theorem을 적어나가면서 하나씩 증명하는 방법이면 좋을 것 같음 (졸업논문처럼)
@@ -80,7 +90,7 @@ Theorem을 적어나가면서 하나씩 증명하는 방법이면 좋을 것 같
 \subsection{The Python code(가제)}
 The python code(가제) generates the possible Cromwell matrix of theta-curves, and compares with the existing knots in the table which is less or equal to 7 crossings.
 It eventually returns the Cromwell matrix of the compared theta-curve.
-To distinguish the Cromwell matrices from theta-curves and handcuff graphs, which is generated and removed by the rules from the above section, we should use the determinant of the Cromwell matrices.
+To distinguish the Cromwell matrices from theta-curves and handcuff graphs, which is generated and removed by the rules from the above section, we should use the determinant of the Cromwell matrices.\\
 
 $\mathbf{Definition}$ The \textbf{grid diagram} of a knot is a projection that consists only of horizontal and vertical lines, and the vertical line always passes above the horizontal line. (However, in this case, there must be exactly two points (excluding the vertices) that are vertically bent for each horizontal line (row) and vertical line (column), and the two vertices must be on the horizontal line.) \\ \\
 $\mathbf{Definition}$ The \textbf{THC-Cromwell matrix} is the matrix that satisfies the following conditions.
@@ -200,6 +210,51 @@ Therefore, $\pm 1$ will be the determinant of the theta-curve's H-deletion matri
     \end{enumerate}
 \end{enumerate}
 \end{proof}
+
+\subsection{Bounds of Arc Index}
+\begin{defn}
+    In a handcuff curve, the \textit{vertex edge} is an edge that is connected to both vertices.
+\end{defn}
+
+\begin{defn}
+    In a handcuff curve, the \textit{link component} is a union of the loops from each vertex to itself.
+\end{defn}
+
+\begin{theorem}[뭐시기뭐시기 출처모름]
+    If $L$ is an alternating and non-split link, then
+    \[ \alpha(L) = c(L)+2. \]
+    %crossing number 정의를 써야하나???
+\end{theorem}
+
+\begin{theorem}[뭐시기뭐시기 출처모름]
+    For any spatial graph $H$,
+    \[ \alpha(H) \leq c(H)+e+b, \]
+    where $e$ is the number of the edge and $b$ is the number of the bouquet.
+\end{theorem}
+
+\begin{corol}
+    If $H$ is a handcuff curve,
+    \[ \alpha(H) \leq c(H)+5. \]
+    Especially, if the link component of $H$ is non-split,
+    \[ \alpha(H) \leq c(H)+3. \]
+\end{corol}
+
+\begin{prop}
+    For a handcuff curve $H$, let $L$ be a link component of $H$. Then,
+    \[ \alpha(H) \geq \alpha(L)+1. \]
+\end{prop}
+\begin{proof}
+    In the arc presentation of $H$, let $v_1$, $v_2$ be the vertices of $H$. Then, there are half-planes that contain the vertex edge of $H$. If we remove them, the remainder is the arc presentation of $L$, the link component of $H$. Since the number of half-planes that contain the vertex edge is at least $1$, we obtain
+    \[ \alpha(H) \geq \alpha(L) + (\text{the number of half plane that contain vertex edge}) \geq \alpha(L)+1. \]
+\end{proof}
+
+Using the Theorem 1, we obtain the following corollary.
+
+\begin{corol}
+    In the handcuff curve, if the link component $L$ is alternating and non-split, then
+    \[ \alpha(H) \geq c(L)+3. \]
+\end{corol}
+
 
 \section{Research Result}
 뭔가 나오긴 하겠지...............?
