--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -24,8 +24,6 @@
 \usepackage{amsmath}
 \usepackage{mathtools}
 \usepackage{amssymb}
-\usepackage{amsthm}
-
 
 % ====================
 % Lengths
@@ -115,7 +113,7 @@
   \end{block}
   \column{0.33\textwidth}
   \begin{block}{Classifying Theta-Curves and Handcuff Graphs by Determinant}
-  \textbf{The given THC-Cromwell matrix is theta-curve if and only if determinant of the H-deletion matrix is $\pm 1$.The given THC-Cromwell matrix is handcuff graph if and only if determinant of the H-deletion matrix is 0 or $\pm 2$.}\\
+      $\mathbf{Theorem.}$ The given THC-Cromwell matrix is theta-curve if and only if determinant of the H-deletion matrix is $\pm 1$.The given THC-Cromwell matrix is handcuff graph if and only if determinant of the H-deletion matrix is 0 or $\pm 2$.
   \end{block}
   \column{0.33\textwidth}
   \begin{block}{새로운 거}
