--- a/Midterm_Poster/main.tex
+++ b/Midterm_Poster/main.tex
@@ -91,7 +91,7 @@
 % \separatorcolumn
 
 % \begin{column}{\colwidth}
-\begin{columns}
+\begin{columns}[t]
   \column{0.33\textwidth}
   \begin{block}{Definitions}
     \begin{itemize}
@@ -113,7 +113,8 @@
   \end{block}
   \column{0.33\textwidth}
   \begin{block}{Classifying Theta-Curves and Handcuff Graphs by Determinant}
-      $\mathbf{Theorem.}$ The given THC-Cromwell matrix is theta-curve if and only if determinant of the H-deletion matrix is $\pm 1$.The given THC-Cromwell matrix is handcuff graph if and only if determinant of the H-deletion matrix is 0 or $\pm 2$.
+      $\mathbf{Theorem.}$ The given THC-Cromwell matrix is theta-curve if and only if determinant of the H-deletion matrix is $\pm 1$.
+      The given THC-Cromwell matrix is handcuff graph if and only if determinant of the H-deletion matrix is 0 or $\pm 2$.
   \end{block}
   \column{0.33\textwidth}
   \begin{block}{새로운 거}
@@ -144,7 +145,7 @@
 
  \begin{alertblock}{Grid Diagram of the Theta-Curves and Handcuff Graphs Up to 7 Crossings}
   \hspace{1cm}
-  \begin{columns}
+  \begin{columns}[t]
   \begin{column}{0.5\textwidth}
   \begin{alertblock}{Theta-Curves}
     
@@ -159,7 +160,7 @@
 
   \end{alertblock}
 
-\begin{columns}
+\begin{columns}[t]
   \column{0.33\textwidth}
   \begin{block}{Bounds of Arc Index}
     \begin{itemize}
